feat: Initial release

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,17 +1,7 @@
 ---
 
-- name: Install auditd
-  ansible.builtin.package:
-    name: "{{ auditd_packages }}"
-    state: present
-  become: yes
-  become_user: root
-
-- name: Activate services
-  ansible.builtin.service:
-    name: "{{ item }}"
-    state: started
-    enabled: yes
-  loop: "{{ auditd_services }}"
-  become: yes
-  become_user: root
+- name: Including 'vars.yml'
+  ansible.builtin.include_tasks: vars.yml
+    
+- name: Including 'install.yml'
+  ansible.builtin.include_tasks: install.yml
