--- a/molecule/default/.molecule-platforms-hetznercloud.yml
+++ b/molecule/default/.molecule-platforms-hetznercloud.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: centos7
-  ci: true
+  ci: false
   server_type: cx11
   image: centos-7
 - name: centos8s
@@ -13,11 +13,11 @@
   server_type: cx11
   image: centos-stream-9
 - name: rockylinux8
-  ci: true
+  ci: false
   server_type: cx11
   image: rocky-8
 - name: rockylinux9
-  ci: true
+  ci: false
   server_type: cx11
   image: rocky-9
 - name: debian10
@@ -25,11 +25,11 @@
   server_type: cx11
   image: debian-10
 - name: debian11
-  ci: true
+  ci: false
   server_type: cx11
   image: debian-11
 - name: debian12
-  ci: true
+  ci: false
   server_type: cx11
   image: debian-12
 - name: ubuntu1804
@@ -45,10 +45,10 @@
   server_type: cx11
   image: ubuntu-22.04
 - name: fedora37
-  ci: true
+  ci: false
   server_type: cx11
   image: fedora-37
 - name: fedora38
-  ci: true
+  ci: false
   server_type: cx11
   image: fedora-38
