--- a/molecule/default/.molecule-platforms-podman.yml
+++ b/molecule/default/.molecule-platforms-podman.yml
@@ -13,7 +13,7 @@
   image: registry.access.redhat.com/ubi9/ubi-init:latest
   pre_build_image: false
 - name: centos7
-  ci: true
+  ci: false
   image: docker.io/geerlingguy/docker-centos7-ansible:latest
   privileged: false
   pre_build_image: true
@@ -27,29 +27,29 @@
   ci: false
   image: docker.io/dropveter/centos9s-ansible:latest
 - name: rockylinux8
-  ci: true
+  ci: false
   image: docker.io/geerlingguy/docker-rockylinux8-ansible:latest
   privileged: true
   pre_build_image: true
   volumes:
     - /sys/fs/cgroup:/sys/fs/cgroup:ro
 - name: rockylinux9
-  ci: true
+  ci: false
   image: docker.io/geerlingguy/docker-rockylinux9-ansible:latest
 - name: oraclelinux8
-  ci: true
+  ci: false
   image: docker.io/dropveter/oraclelinux8-ansible
 - name: oraclelinux9
-  ci: true
+  ci: false
   image: docker.io/dropveter/oraclelinux9-ansible
 - name: almalinux8
-  ci: true
+  ci: false
   image: docker.io/dropveter/almalinux8-ansible
 - name: almalinux9
-  ci: true
+  ci: false
   image: docker.io/dropveter/almalinux9-ansible
 - name: opensuse15
-  ci: true
+  ci: false
   image: docker.io/dropveter/opensuse15-ansible:latest
 - name: opensusetumbleweed15
   ci: false
@@ -58,10 +58,10 @@
   ci: false
   image: docker.io/geerlingguy/docker-debian10-ansible:latest
 - name: debian11
-  ci: true
+  ci: false
   image: docker.io/geerlingguy/docker-debian11-ansible:latest
 - name: debian12
-  ci: true
+  ci: false
   image: docker.io/geerlingguy/docker-debian12-ansible:latest
 - name: ubuntu1804
   ci: false
@@ -77,10 +77,10 @@
   ci: true
   image: docker.io/geerlingguy/docker-ubuntu2204-ansible:latest
 - name: fedora37
-  ci: true
+  ci: false
   image: docker.io/geerlingguy/docker-fedora37-ansible:latest
 - name: fedora38
-  ci: true
+  ci: false
   image: docker.io/geerlingguy/docker-fedora38-ansible:latest
 - name: alpine3
   ci: false
