--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,6 +119,150 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          # - name: rockylinux8_2.9
+          #   runs_on: ubuntu-latest
+          #   distro: rockylinux8
+          #   playbook: converge.yml
+          #   ansible: "ansible==2.9.27"
+          #   ansible_lint: "ansible-lint==5.4.0"
+          #   hetznercloud: True
+          # - name: rockylinux8_2.14
+          - name: rockylinux8
+            runs_on: ubuntu-latest
+            distro: rockylinux8
+            playbook: converge.yml
+            ansible: "ansible-core>2.16,<2.17"
+            ansible_lint: "ansible-lint>6,<7"
+            hetznercloud: True
+
+          # - name: rockylinux9_2.9
+          #   runs_on: ubuntu-latest
+          #   distro: rockylinux9
+          #   playbook: converge.yml
+          #   ansible: "ansible==2.9.27"
+          #   ansible_lint: "ansible-lint==5.4.0"
+          #   hetznercloud: True
+          # - name: rockylinux9_2.14
+          - name: rockylinux9
+            runs_on: ubuntu-latest
+            distro: rockylinux9
+            playbook: converge.yml
+            ansible: "ansible-core>2.16,<2.17"
+            ansible_lint: "ansible-lint>6,<7"
+            hetznercloud: True
+
+          # - name: oraclelinux8_2.9
+          #   runs_on: ubuntu-latest
+          #   distro: oraclelinux8
+          #   playbook: converge.yml
+          #   ansible: "ansible==2.9.27"
+          #   ansible_lint: "ansible-lint==5.4.0"
+          #   hetznercloud: False
+          # - name: oraclelinux8_2.14
+          - name: oraclelinux8
+            runs_on: ubuntu-latest
+            distro: oraclelinux8
+            playbook: converge.yml
+            ansible: "ansible-core>2.16,<2.17"
+            ansible_lint: "ansible-lint>6,<7"
+            hetznercloud: False
+
+          # - name: oraclelinux9_2.9
+          #   runs_on: ubuntu-latest
+          #   distro: oraclelinux9
+          #   playbook: converge.yml
+          #   ansible: "ansible==2.9.27"
+          #   ansible_lint: "ansible-lint==5.4.0"
+          #   hetznercloud: False
+          # - name: oraclelinux9_2.14
+          - name: oraclelinux9
+            runs_on: ubuntu-latest
+            distro: oraclelinux9
+            playbook: converge.yml
+            ansible: "ansible-core>2.16,<2.17"
+            ansible_lint: "ansible-lint>6,<7"
+            hetznercloud: False
+
+          # - name: almalinux8_2.9
+          #   runs_on: ubuntu-latest
+          #   distro: almalinux8
+          #   playbook: converge.yml
+          #   ansible: "ansible==2.9.27"
+          #   ansible_lint: "ansible-lint==5.4.0"
+          #   hetznercloud: False
+          # - name: almalinux8_2.14
+          - name: almalinux8
+            runs_on: ubuntu-latest
+            distro: almalinux8
+            playbook: converge.yml
+            ansible: "ansible-core>2.16,<2.17"
+            ansible_lint: "ansible-lint>6,<7"
+            hetznercloud: False
+
+          # - name: almalinux9_2.9
+          #   runs_on: ubuntu-latest
+          #   distro: almalinux9
+          #   playbook: converge.yml
+          #   ansible: "ansible==2.9.27"
+          #   ansible_lint: "ansible-lint==5.4.0"
+          #   hetznercloud: False
+          # - name: almalinux9_2.14
+          - name: almalinux9
+            runs_on: ubuntu-latest
+            distro: almalinux9
+            playbook: converge.yml
+            ansible: "ansible-core>2.16,<2.17"
+            ansible_lint: "ansible-lint>6,<7"
+            hetznercloud: False
+
+          # - name: opensuse15_2.9
+          #   runs_on: ubuntu-latest
+          #   distro: opensuse15
+          #   playbook: converge.yml
+          #   ansible: "ansible==2.9.27"
+          #   ansible_lint: "ansible-lint==5.4.0"
+          #   hetznercloud: False
+          # - name: opensuse15_2.14
+          - name: opensuse15
+            runs_on: ubuntu-latest
+            distro: opensuse15
+            playbook: converge.yml
+            ansible: "ansible-core>2.16,<2.17"
+            ansible_lint: "ansible-lint>6,<7"
+            hetznercloud: False
+
+          # - name: debian11_2.9
+          #   runs_on: ubuntu-latest
+          #   distro: debian11
+          #   playbook: converge.yml
+          #   ansible: "ansible==2.9.27"
+          #   ansible_lint: "ansible-lint==5.4.0"
+          #   hetznercloud: True
+          # - name: debian11_2.14
+          - name: debian11
+            runs_on: ubuntu-latest
+            distro: debian11
+            playbook: converge.yml
+            ansible: "ansible-core>2.16,<2.17"
+            ansible_lint: "ansible-lint>6,<7"
+            hetznercloud: True
+
+          # - name: debian12_2.9
+          #   runs_on: ubuntu-latest
+          #   distro: debian12
+          #   playbook: converge.yml
+          #   ansible: "ansible==2.9.27"
+          #   ansible_lint: "ansible-lint==5.4.0"
+          #   hetznercloud: True
+          # - name: debian12_2.14
+          - name: debian12
+            runs_on: ubuntu-latest
+            distro: debian12
+            playbook: converge.yml
+            ansible: "ansible-core>2.16,<2.17"
+            ansible_lint: "ansible-lint>6,<7"
+            hetznercloud: True
+
           # - name: ubuntu2004_2.9
           #   runs_on: ubuntu-latest
           #   distro: ubuntu2004
@@ -162,6 +306,38 @@ jobs:
           - name: ubuntu2404
             runs_on: ubuntu-latest
             distro: ubuntu2404
+            playbook: converge.yml
+            ansible: "ansible-core>2.16,<2.17"
+            ansible_lint: "ansible-lint>6,<7"
+            hetznercloud: True
+
+          # - name: fedora39_2.9
+          #   runs_on: ubuntu-latest
+          #   distro: fedora39
+          #   playbook: converge.yml
+          #   ansible: "ansible==2.9.27"
+          #   ansible_lint: "ansible-lint==5.4.0"
+          #   hetznercloud: True
+          # - name: fedora39_2.14
+          - name: fedora39
+            runs_on: ubuntu-latest
+            distro: fedora39
+            playbook: converge.yml
+            ansible: "ansible-core>2.16,<2.17"
+            ansible_lint: "ansible-lint>6,<7"
+            hetznercloud: True
+
+          # - name: fedora40_2.9
+          #   runs_on: ubuntu-latest
+          #   distro: fedora40
+          #   playbook: converge.yml
+          #   ansible: "ansible==2.9.27"
+          #   ansible_lint: "ansible-lint==5.4.0"
+          #   hetznercloud: True
+          # - name: fedora40_2.14
+          - name: fedora40
+            runs_on: ubuntu-latest
+            distro: fedora40
             playbook: converge.yml
             ansible: "ansible-core>2.16,<2.17"
             ansible_lint: "ansible-lint>6,<7"
