--- a/molecule/default/.molecule-platforms-docker.yml
+++ b/molecule/default/.molecule-platforms-docker.yml
@@ -57,7 +57,7 @@
   volumes:
     - /sys/fs/cgroup:/sys/fs/cgroup:rw
 - name: rockylinux8
-  ci: false
+  ci: true
   image: docker.io/geerlingguy/docker-rockylinux8-ansible:latest
   privileged: true
   pre_build_image: true
@@ -65,7 +65,7 @@
   volumes:
     - /sys/fs/cgroup:/sys/fs/cgroup:rw
 - name: rockylinux9
-  ci: false
+  ci: true
   image: docker.io/geerlingguy/docker-rockylinux9-ansible:latest
   privileged: true
   pre_build_image: true
@@ -73,7 +73,7 @@
   volumes:
     - /sys/fs/cgroup:/sys/fs/cgroup:rw
 - name: oraclelinux8
-  ci: false
+  ci: true
   image: docker.io/dropveter/oraclelinux8-ansible
   privileged: true
   pre_build_image: true
@@ -81,7 +81,7 @@
   volumes:
     - /sys/fs/cgroup:/sys/fs/cgroup:rw
 - name: oraclelinux9
-  ci: false
+  ci: true
   image: docker.io/dropveter/oraclelinux9-ansible
   privileged: true
   pre_build_image: true
@@ -89,7 +89,7 @@
   volumes:
     - /sys/fs/cgroup:/sys/fs/cgroup:rw
 - name: almalinux8
-  ci: false
+  ci: true
   image: docker.io/dropveter/almalinux8-ansible
   privileged: true
   pre_build_image: true
@@ -97,7 +97,7 @@
   volumes:
     - /sys/fs/cgroup:/sys/fs/cgroup:rw
 - name: almalinux9
-  ci: false
+  ci: true
   image: docker.io/dropveter/almalinux9-ansible
   privileged: true
   pre_build_image: true
@@ -105,7 +105,7 @@
   volumes:
     - /sys/fs/cgroup:/sys/fs/cgroup:rw
 - name: opensuse15
-  ci: false
+  ci: true
   image: docker.io/geerlingguy/docker-opensuseleap15-ansible:latest
   privileged: true
   pre_build_image: true
@@ -129,7 +129,7 @@
   volumes:
     - /sys/fs/cgroup:/sys/fs/cgroup:rw
 - name: debian11
-  ci: false
+  ci: true
   image: docker.io/geerlingguy/docker-debian11-ansible:latest
   privileged: true
   pre_build_image: true
@@ -137,7 +137,7 @@
   volumes:
     - /sys/fs/cgroup:/sys/fs/cgroup:rw
 - name: debian12
-  ci: false
+  ci: true
   image: docker.io/geerlingguy/docker-debian12-ansible:latest
   privileged: true
   pre_build_image: true
@@ -193,7 +193,7 @@
   volumes:
     - /sys/fs/cgroup:/sys/fs/cgroup:rw
 - name: fedora39
-  ci: false
+  ci: true
   image: docker.io/geerlingguy/docker-fedora39-ansible:latest
   privileged: true
   pre_build_image: true
@@ -201,7 +201,7 @@
   volumes:
     - /sys/fs/cgroup:/sys/fs/cgroup:rw
 - name: fedora40
-  ci: false
+  ci: true
   image: docker.io/geerlingguy/docker-fedora40-ansible:latest
   privileged: true
   pre_build_image: true
