--- a/molecule/default/.molecule-platforms-hetznercloud.yml
+++ b/molecule/default/.molecule-platforms-hetznercloud.yml
@@ -13,11 +13,11 @@
   server_type: cx11
   image: centos-stream-9
 - name: rockylinux8
-  ci: false
+  ci: true
   server_type: cx11
   image: rocky-8
 - name: rockylinux9
-  ci: false
+  ci: true
   server_type: cx11
   image: rocky-9
 - name: debian10
@@ -25,11 +25,11 @@
   server_type: cx11
   image: debian-10
 - name: debian11
-  ci: false
+  ci: true
   server_type: cx11
   image: debian-11
 - name: debian12
-  ci: false
+  ci: true
   server_type: cx11
   image: debian-12
 - name: ubuntu1804
@@ -57,10 +57,10 @@
   server_type: cx11
   image: fedora-38
 - name: fedora39
-  ci: false
+  ci: true
   server_type: cx11
   image: fedora-39
 - name: fedora40
-  ci: false
+  ci: true
   server_type: cx11
   image: fedora-40
