--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -15,3 +15,4 @@
   loop: "{{ auditd_services }}"
   become: yes
   become_user: root
+  when: ansible_virtualization_type not in [ 'docker', 'container', 'containerd' ]
